--- a/src/layouts/VersionB.css
+++ b/src/layouts/VersionB.css
@@ -285,7 +285,7 @@
   max-width: 100%;
 }
 
-.footer-container {
+.versionB .footer-container {
     width: 100%;
     max-width: 100%;
     min-height: 277px;
